# semble-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/semble_agent/: __init__.py  __main__.py  agent.py  browser.py  config.py  main.py  prompts.py  server.py
src/semble_agent/llm/: __init__.py  anthropic.py  base.py  cursor.py  dust.py  openai.py
tests/: test_agent.py  test_browser.py
